--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="assets/e2e07e10337b719fd295995f0d9249b7.png" style="height: 350px;"/>
     </div>
     <div class="imagen3">
-        <img src="https://images.vexels.com/media/users/3/238139/isolated/preview/f1387a76260bf4d2d49b74ab546bb5a8-retro-cartoon-strawberry-character.png" style="height: 200px;"/>
+        <img src="assets/fb99d6191232039940b80e8c5a276cc2-removebg-preview.png" style="height: 200px;"/>
     </div>
     <div class="imagen4">
         <img src="https://media-s3-us-east-1.ceros.com/hannah-s/images/2017/11/06/5387f065ad59d43cb738f4e6bb64c1f1/c0e-3.gif?imageOpt=1" style="height: 250px;"/>
@@ -35,11 +35,11 @@
         </p>
         <p class="descripcion">
             Soy una persona apasionada con las actividades que realizo. Aparte de mis <a class="glitch" href="proyectos.html">proyectos en la programación</a> y mis
-            estudios, hago muchas otras actividades. Me gusta mucho <a class="glitch" href="libros.html">leer</a>, me gusta ver <a class="glitch" href="peliculas.html">películas</a>, y especialmente me
+            estudios, hago muchas otras actividades. <br>Me gusta  mucho <a class="glitch" href="libros.html">leer</a>, me gusta ver <a class="glitch" href="peliculas.html">películas</a>, y especialmente me
             gusta escuchar <a class="glitch" href="musica.html">música</a>.
         </p>
         <p class="descripcion">
-            Si me quieres contactar siéntete libre de escribirme un <a class="glitch" href="https://wa.link/5p7t04" target="_blank">mensaje</a> o enviarme un mensaje por <a href="mailto:maria.camargo@ucb.edu.bo?subject = Feedback&body = Message">gmail</a>.
+            Si me quieres contactar siéntete libre de <br> escribirme un <a class="glitch" href="https://wa.link/5p7t04" target="_blank">mensaje</a> o escribirme por <a href="mailto:maria.camargo@ucb.edu.bo?subject = Feedback&body = Message">gmail</a>.
         </p>
     </div>
 </body>
