--- a/proyectos.html
+++ b/proyectos.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
+    <link href='https://fonts.googleapis.com/css?family=Azeret Mono' rel='stylesheet'>
+    <link rel="stylesheet" href="estilos2.css">
 </head>
+
 <body>
+    <div class="content">
+        <h2 class="text_shadows">Experiencia</h2>
+    </div>
+    <div class="meTalking">
+        <img id="me" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif"
+            style="width: 400px;">
+        <div class="bubble">
+            <div class="texto">
+                <p><b>3 años de experiencia en la programación, dominado mayormente el lenguaje de c + +.</b></p>
+                <p>En el futuro espero poder dedicarme al front end y diseño de páginas.</p>
+                <p>Tengo experiencia en una variedad de cursos acerca de programación que pase en compañías como
+                    Jalasoft,
+                    truextend y en AGETIC Bolivia.</p>
+            </div>
+        </div>
+    </div>
+    <center>
+        <table>
+        <tr>
+            <td>Actualmente</td>
+            <td>Cursando 6º semestre de la carrera</td>
+        </tr>
+    </table>
+    </center>
     
 </body>
+
 </html>
