--- a/proyectos.html
+++ b/proyectos.html
@@ -30,8 +30,34 @@
     <center>
         <table>
         <tr>
-            <td>Actualmente</td>
+            <td><b>Actualmente</b></td>
             <td>Cursando 6º semestre de la carrera</td>
+            <td>estudiante</td>
+            <td>Universidad catolica boliviana</td>
+        </tr>
+        <tr>
+            <td><b>2019</b></td>
+            <td>Curso de robotica</td>
+            <td>concursante</td>
+            <td>truextend</td>
+        </tr>
+        <tr>
+            <td><b>2018-2019</b></td>
+            <td>Cursos de programacion y aplicaciones</td>
+            <td>estudiante</td>
+            <td>Jalasoft</td>
+        </tr>
+        <tr>
+            <td><b>2018-2019</b></td>
+            <td>Cursando secundaria</td>
+            <td>estudiante</td>
+            <td>Colegio Santa Maria Micaela Privado</td>
+        </tr>
+        <tr>
+            <td><b>2010-2017</b></td>
+            <td>Cursando colegio</td>
+            <td>estudiante</td>
+            <td>Colegio Maria Auxiliadora Cristo Rey</td>
         </tr>
     </table>
     </center>
