--- a/proyectos.html
+++ b/proyectos.html
@@ -11,57 +11,108 @@
 </head>
 
 <body>
-    <div class="content">
-        <h2 class="text_shadows">Experiencia</h2>
+    <div class="header">
+        <a id="nav" href="index.html"><span style="font-size: 40px;">&#9756;</span></a>
+        <a id="nav" href="#content">Experiencia</a>
+        <a id="nav" href="#trabajos">Trabajos</a>
     </div>
-    <div class="meTalking">
-        <img id="me" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif"
-            style="width: 400px;">
-        <div class="bubble">
-            <div class="texto">
-                <p><b>3 años de experiencia en la programación, dominado mayormente el lenguaje de c + +.</b></p>
-                <p>En el futuro espero poder dedicarme al front end y diseño de páginas.</p>
-                <p>Tengo experiencia en una variedad de cursos acerca de programación que pase en compañías como
-                    Jalasoft,
-                    truextend y en AGETIC Bolivia.</p>
+    <div class="cuerpo-visible">
+        <div class="content" id="content">
+            <h2 class="text_shadows">Experiencia</h2>
+        </div>
+        <div class="meTalking">
+            <img id="me"
+                src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif"
+                style="width: 400px;">
+            <div class="bubble">
+                <div class="texto">
+                    <p><b>3 años de experiencia en la programación, dominado mayormente el lenguaje de c + +.</b></p>
+                    <p>En el futuro espero poder dedicarme al front end y diseño de páginas.</p>
+                    <p>Tengo experiencia en una variedad de cursos acerca de programación que pase en compañías como
+                        Jalasoft,
+                        truextend y en AGETIC Bolivia.</p>
+                </div>
             </div>
         </div>
+        <center>
+            <h2>Estudios:</h2>
+            <table>
+                <tr>
+                    <td><b>Actualmente</b></td>
+                    <td>Cursando 6º semestre de la carrera</td>
+                    <td>estudiante</td>
+                    <td>Universidad catolica boliviana</td>
+                </tr>
+                <tr>
+                    <td><b>2019</b></td>
+                    <td>Curso de robotica</td>
+                    <td>concursante</td>
+                    <td>truextend</td>
+                </tr>
+                <tr>
+                    <td><b>2018-2019</b></td>
+                    <td>Cursos de programacion y aplicaciones</td>
+                    <td>estudiante</td>
+                    <td>Jalasoft</td>
+                </tr>
+                <tr>
+                    <td><b>2018-2019</b></td>
+                    <td>Cursando secundaria</td>
+                    <td>estudiante</td>
+                    <td>Colegio Santa Maria Micaela Privado</td>
+                </tr>
+                <tr>
+                    <td><b>2010-2017</b></td>
+                    <td>Cursando colegio</td>
+                    <td>estudiante</td>
+                    <td>Colegio Maria Auxiliadora Cristo Rey</td>
+                </tr>
+            </table>
+        </center>
+        <div id="trabajos" class="trabajosh">
+            <h2 class="text_shadows">Trabajos</h2>
+        </div>
+        <div class="trabajos">
+            <div class="contenedor-trabajos">
+                MANUAL DE USO DE HTML
+                <div class="linea-1">
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miManual/" target="_blank">
+                            <img class="imagen" src="assets/work1.png" />
+                        </a>
+                    </div>
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miManual/html.html" target="_blank">
+                            <img class="imagen" src="assets/work2.png" />
+                        </a>
+                    </div>
+                </div>
+                MANUAL DE USO DE CSS
+                <div class="elemento">
+                    <a href="https://belena25.github.io/miManual/css.html">
+                        <img class="imagen" src="assets/worh3.png">
+                    </a>
+                </div>
+                MI PRESENTACION
+                <div class="linea-2">
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miPortafolio/" target="_blank">
+                            <img class="imagen" src="assets/work4.png">
+                        </a>
+                    </div>
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miPortafolio/" target="_blank">
+                            <img class="imagen" src="assets/work5.png">
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <footer>
+            Copyright Belen Camargo 2022
+        </footer>
     </div>
-    <center>
-        <table>
-        <tr>
-            <td><b>Actualmente</b></td>
-            <td>Cursando 6º semestre de la carrera</td>
-            <td>estudiante</td>
-            <td>Universidad catolica boliviana</td>
-        </tr>
-        <tr>
-            <td><b>2019</b></td>
-            <td>Curso de robotica</td>
-            <td>concursante</td>
-            <td>truextend</td>
-        </tr>
-        <tr>
-            <td><b>2018-2019</b></td>
-            <td>Cursos de programacion y aplicaciones</td>
-            <td>estudiante</td>
-            <td>Jalasoft</td>
-        </tr>
-        <tr>
-            <td><b>2018-2019</b></td>
-            <td>Cursando secundaria</td>
-            <td>estudiante</td>
-            <td>Colegio Santa Maria Micaela Privado</td>
-        </tr>
-        <tr>
-            <td><b>2010-2017</b></td>
-            <td>Cursando colegio</td>
-            <td>estudiante</td>
-            <td>Colegio Maria Auxiliadora Cristo Rey</td>
-        </tr>
-    </table>
-    </center>
-    
 </body>
 
 </html>
