--- a/index.html
+++ b/index.html
@@ -418,29 +418,35 @@
     <script>
         function openNavLibro() {
             document.getElementById("libros").style.width = "1000px";
+            document.getElementById("libros").style.visibility = "visible";
             document.getElementById("main").style.marginLeft = "0px";
         }
 
         function closeNavLibros() {
             document.getElementById("libros").style.width = "0";
+            document.getElementById("libros").style.visibility = "hidden";
             document.getElementById("main").style.marginLeft = "0";
         }
         function openNavPelicula() {
             document.getElementById("peliculas").style.width = "1000px";
+            document.getElementById("peliculas").style.visibility = "visible";
             document.getElementById("main").style.marginLeft = "0px";
         }
 
         function closeNavPeliculas() {
             document.getElementById("peliculas").style.width = "0";
+            document.getElementById("peliculas").style.visibility = "hidden";
             document.getElementById("main").style.marginLeft = "0";
         }
         function openNavMusica() {
             document.getElementById("musica").style.width = "1000px";
+            document.getElementById("musica").style.visibility = "visible";
             document.getElementById("main").style.marginLeft = "0px";
         }
 
         function closeNavMusica() {
             document.getElementById("musica").style.width = "0";
+            document.getElementById("musica").style.visibility = "hidden";
             document.getElementById("main").style.marginLeft = "0";
         }
     </script>
