--- a/proyectos.html
+++ b/proyectos.html
@@ -22,8 +22,7 @@
         </div>
         <div class="meTalking">
             <img id="me"
-                src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif"
-                style="width: 400px;">
+                src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif">
             <div class="bubble">
                 <div class="texto">
                     <p><b>3 años de experiencia en la programación, dominado mayormente el lenguaje de c + +.</b></p>
@@ -70,16 +69,16 @@
                 </tr>
             </table>
         </center>
-        <div id="trabajos" class="trabajosh">
+        <div class="trabajos">
+            <div id="trabajos" class="trabajosh">
             <h2 class="text_shadows">Trabajos</h2>
         </div>
-        <div class="trabajos">
             <div class="contenedor-trabajos">
                 MANUAL DE USO DE HTML
                 <div class="linea-1">
                     <div class="elemento">
                         <a href="https://belena25.github.io/miManual/" target="_blank">
-                            <img class="imagen" src="assets/work1.png" />
+                            <img class="imagen" src="assets/work1.png"/>
                         </a>
                     </div>
                     <div class="elemento">
