--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     style="height: 300px;" />
             </div>
             <p class="descripcion">
-                Hola! Soy Belen, nací y crecí en Cochabamba y soy una entusiasta de la programación.
+                Hola! Soy Belen, nací y crecí en Cochabamba y me encanta la programación.
             </p>
             <p class="descripcion">
                 Actualmente me encuentro estudiando la carrera de <a id="glitch"
