--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
                 Hola! Soy Belen, nací y crecí en Cochabamba y me encanta la programación.
             </p>
             <p class="descripcion">
-                Actualmente me encuentro estudiando la carrera de <a id="glitch"
+                Actualmente me encuentro estudiando la carrera de <a class="clave"
                     href="https://cba.ucb.edu.bo/depto-ingenieria-y-cs-exactas/ingenieria-de-sistemas/"
                     target="_blank">Ingeniería de Sistemas en la Universidad Católica
                     Boliviana</a>.
             </p>
             <p class="descripcion">
-                Soy una persona apasionada con las actividades que realizo. Aparte de mis <a class="glitch"
+                Soy una persona apasionada con las actividades que realizo. Aparte de mis <a class="clave"
                     href="proyectos.html">proyectos en la programación</a> y mis
-                estudios, hago muchas otras actividades. <br>Me gusta mucho <a class="glitch" href="#"
-                    onclick="openNavLibro()">leer</a>, me gusta ver <a class="glitch" href="#"
+                estudios, hago muchas otras actividades. <br>Me gusta mucho <a class="clave" href="#"
+                    onclick="openNavLibro()">leer</a>, me gusta ver <a class="clave" href="#"
                     onclick="openNavPelicula()">películas</a>, y
                 especialmente me
-                gusta escuchar <a class="glitch" href="#" onclick="openNavMusica()">música</a>.
+                gusta escuchar <a class="clave" href="#" onclick="openNavMusica()">música</a>.
             </p>
             <p class="descripcion">
-                Si me quieres contactar siéntete libre de <br> escribirme un <a class="glitch"
-                    href="https://wa.link/5p7t04" target="_blank">mensaje</a> o escribirme por <a
+                Si me quieres contactar siéntete libre de <br> escribirme un <a class="clave"
+                    href="https://wa.link/5p7t04" target="_blank">mensaje</a> o escribirme por <a class="clave"
                     href="mailto:maria.camargo@ucb.edu.bo?subject = Feedback&body = Message">gmail</a>.
             </p>
         </div>
