--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
       href="https://fonts.googleapis.com/css?family=Azeret Mono"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilos.css" />
   </head>
 
   <body>
     <div id="main">
-      <h1 class="tittle">Mi presentación</h1>
-      <div class="imagen1">
-        <img
-          src="assets/e2e07e10337b719fd295995f0d9249b7.png"
-          style="height: 350px"
-        />
-      </div>
+      <h1 class="tittle text-center mt-5">Mi presentación</h1>
+      
       <div class="imagen3">
         <img
           src="assets/fb99d6191232039940b80e8c5a276cc2-removebg-preview.png"
@@ -40,6 +36,11 @@
         />
       </div>
       <div class="cuadro_descripcion">
+        <div class="imagen1">
+          <img
+            src="assets/e2e07e10337b719fd295995f0d9249b7.png"
+          />
+        </div>
         <p class="descripcion">
           Hola! Soy Belen, nací y crecí en Cochabamba y soy una entusiasta de la
           programación.
