Image 1 kinda responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="cuadro_descripcion">
         <div class="imagen1">
           <img
-            src="assets/e2e07e10337b719fd295995f0d9249b7.png"
+            src="assets/e2e07e10337b719fd295995f0d9249b7.png" class="img-fluid mb-3"
           />
         </div>
         <p class="descripcion">
