--- a/index.html
+++ b/index.html
@@ -16,19 +16,6 @@
   <body>
     <div id="main">
       <h1 class="tittle text-center mt-5">Mi presentación</h1>
-      
-      <div class="imagen4">
-        <img
-          src="https://media-s3-us-east-1.ceros.com/hannah-s/images/2017/11/06/5387f065ad59d43cb738f4e6bb64c1f1/c0e-3.gif?imageOpt=1"
-          style="height: 250px"
-        />
-      </div>
-      <div class="imagen5">
-        <img
-          src="https://cdn.dribbble.com/users/1016047/screenshots/4583870/media/7f72807b587e24204391f4277a617cba.png?compress=1&resize=400x300"
-          style="height: 300px"
-        />
-      </div>
       <div class="cuadro_descripcion">
         <div class="imagen1">
           <img
@@ -38,6 +25,16 @@
         <div class="imagen3">
           <img
             src="assets/fb99d6191232039940b80e8c5a276cc2-removebg-preview.png"
+          />
+        </div>
+        <div class="imagen4">
+          <img
+            src="https://media-s3-us-east-1.ceros.com/hannah-s/images/2017/11/06/5387f065ad59d43cb738f4e6bb64c1f1/c0e-3.gif?imageOpt=1"
+          />
+        </div>
+        <div class="imagen5">
+          <img
+            src="assets/sticker_sly.png"
           />
         </div>
         <p class="descripcion">
