Correccion de imagen grande

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           <a class="glitch" href="proyectos.html"
             >proyectos en la programación</a
           >
-          y mis estudios, hago muchas otras actividades. <br />Me gusta mucho
+          y mis estudios, hago muchas otras actividades. <br/>
+          Me gusta mucho
           <a class="glitch" href="#" onclick="openNavLibro()">leer</a>, me gusta
           ver
           <a class="glitch" href="#" onclick="openNavPelicula()">películas</a>,
