--- a/proyectos.html
+++ b/proyectos.html
@@ -26,7 +26,7 @@
                 style="width: 400px;">
             <div class="bubble">
                 <div class="texto">
-                    <p><b>3 años de experiencia en la programación, dominado mayormente el lenguaje de c + +.</b></p>
+                    <p><b>4 años de experiencia en la programación, dominando los lenguajes de c + + , python y Javascript.</b></p>
                     <p>En el futuro espero poder dedicarme al front end y diseño de páginas.</p>
                     <p>Tengo experiencia en una variedad de cursos acerca de programación que pase en compañías como
                         Jalasoft,
@@ -39,7 +39,7 @@
             <table>
                 <tr>
                     <td><b>Actualmente</b></td>
-                    <td>Cursando 6º semestre de la carrera</td>
+                    <td>Cursando 9º semestre de la carrera</td>
                     <td>estudiante</td>
                     <td>Universidad catolica boliviana</td>
                 </tr>
@@ -57,15 +57,9 @@
                 </tr>
                 <tr>
                     <td><b>2018-2019</b></td>
-                    <td>Cursando secundaria</td>
+                    <td>Cursando secundaria y bachillerato</td>
                     <td>estudiante</td>
                     <td>Colegio Santa Maria Micaela Privado</td>
-                </tr>
-                <tr>
-                    <td><b>2010-2017</b></td>
-                    <td>Cursando colegio</td>
-                    <td>estudiante</td>
-                    <td>Colegio Maria Auxiliadora Cristo Rey</td>
                 </tr>
             </table>
         </center>
