--- a/proyectos.html
+++ b/proyectos.html
@@ -1,197 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyectos</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Azeret Mono"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Azeret Mono" rel="stylesheet" />
     <link rel="stylesheet" href="estilos2.css" />
-  </head>
-
-  <body>
+</head>
+<body>
     <div class="header">
-      <a id="nav" href="index.html"
-        ><span style="font-size: 40px">&#9756;</span></a
-      >
-      <a id="nav" href="#content">Experiencia</a>
-      <a id="nav" href="#trabajos">Trabajos</a>
-      <a id="nav" href="#presentacionesh">Presentaciones</a>
+        <a id="nav" href="index.html"><span style="font-size: 40px">&#9756;</span></a>
+        <a id="nav" href="#content">Experiencia</a>
+        <a id="nav" href="#trabajos">Trabajos</a>
+        <a id="nav" href="#presentacionesh">Presentaciones</a>
     </div>
     <div class="cuerpo-visible">
-      <div class="content" id="content">
-        <h2 class="text_shadows">Experiencia</h2>
-      </div>
-      <div class="meTalking">
-        <img
-          id="me"
-          src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif"
-        />
-        <div class="bubble">
-          <div class="texto">
-            <p>
-              <b
-                >4 años de experiencia en la programación, dominando los
-                lenguajes de c + + , python y Javascript.</b
-              >
-            </p>
-            <p>
-              En el futuro espero poder dedicarme al front end y diseño de
-              páginas.
-            </p>
-            <p>
-              Tengo experiencia en una variedad de cursos acerca de programación
-              que pase en compañías como Jalasoft, truextend y en AGETIC
-              Bolivia.
-            </p>
-          </div>
+        <div class="content" id="content">
+            <h2 class="text_shadows">Experiencia</h2>
         </div>
-      </div>
-      <center>
-        <h2>Estudios:</h2>
-        <table>
-          <tr>
-            <td><b>Actualmente</b></td>
-            <td>Cursando 9º semestre de la carrera</td>
-            <td>Universidad catolica boliviana</td>
-          </tr>
-          <tr>
-            <td><b>2023 - actualmente</b></td>
-            <td>Estudiante en variedad de cursos disponibles</td>
-            <td>Coursera</td>
-          </tr>
-          <tr>
-            <td><b>2019</b></td>
-            <td>Curso de robotica</td>
-            <td>truextend</td>
-          </tr>
-          <tr>
-            <td><b>2018-2019</b></td>
-            <td>Cursos de programacion y aplicaciones</td>
-            <td>Jalasoft</td>
-          </tr>
-          <tr>
-            <td><b>2018-2019</b></td>
-            <td>Cursando secundaria y bachillerato</td>
-            <td>Colegio Santa Maria Micaela Privado</td>
-          </tr>
-        </table>
-      </center>
-      <div id="trabajos" class="trabajosh">
-        <h2 class="text_shadows">Trabajos</h2>
-      </div>
-      <div class="trabajos">
-        <div class="contenedor-trabajos">
-          MANUAL DE USO DE HTML
-          <div class="linea-1">
-            <div class="elemento">
-              <a href="https://belena25.github.io/miManual/" target="_blank">
-                <img class="imagen" src="assets/work1.png" />
-              </a>
+        <div class="meTalking">
+            <img id="me" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0bcc1b82134105.5d140f6c549aa.gif" />
+            <div class="bubble">
+                <div class="texto">
+                    <p><b>4 años de experiencia en la programación, dominando los lenguajes de C++, Python y Javascript.</b></p>
+                    <p>En el futuro espero poder dedicarme al front end y diseño de páginas.</p>
+                    <p>Tengo experiencia en una variedad de cursos acerca de programación que pase en compañías como Jalasoft, Truextend y en AGETIC Bolivia.</p>
+                </div>
             </div>
-            <div class="elemento">
-              <a
-                href="https://belena25.github.io/miManual/html.html"
-                target="_blank"
-              >
-                <img class="imagen" src="assets/work2.png" />
-              </a>
+        </div>
+        <center>
+            <h2>Estudios:</h2>
+            <table>
+                <tr>
+                    <td><b>Actualmente</b></td>
+                    <td>Cursando 9º semestre de la carrera</td>
+                    <td>Universidad catolica boliviana</td>
+                </tr>
+                <tr>
+                    <td><b>2023 - actualmente</b></td>
+                    <td>Estudiante en variedad de cursos disponibles</td>
+                    <td>Coursera</td>
+                </tr>
+                <tr>
+                    <td><b>2019</b></td>
+                    <td>Curso de robotica</td>
+                    <td>Truextend</td>
+                </tr>
+                <tr>
+                    <td><b>2018-2019</b></td>
+                    <td>Cursos de programacion y aplicaciones</td>
+                    <td>Jalasoft</td>
+                </tr>
+                <tr>
+                    <td><b>2018-2019</b></td>
+                    <td>Cursando secundaria y bachillerato</td>
+                    <td>Colegio Santa Maria Micaela Privado</td>
+                </tr>
+            </table>
+        </center>
+        <div id="trabajos" class="trabajosh">
+            <h2 class="text_shadows">Trabajos</h2>
+        </div>
+        <div class="trabajos">
+            <div class="contenedor-trabajos">
+                MANUAL DE USO DE HTML
+                <div class="linea-1">
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miManual/" target="_blank">
+                            <img class="imagen" src="assets/work1.png" />
+                        </a>
+                    </div>
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miManual/html.html" target="_blank">
+                            <img class="imagen" src="assets/work2.png" />
+                        </a>
+                    </div>
+                </div>
+                MANUAL DE USO DE CSS
+                <div class="elemento">
+                    <a href="https://belena25.github.io/miManual/css.html">
+                        <img class="imagen" src="assets/worh3.png" />
+                    </a>
+                </div>
+                MI PRESENTACION
+                <div class="linea-2">
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miPortafolio/" target="_blank">
+                            <img class="imagen" src="assets/work4.png" />
+                        </a>
+                    </div>
+                    <div class="elemento">
+                        <a href="https://belena25.github.io/miPortafolio/" target="_blank">
+                            <img class="imagen" src="assets/work5.png" />
+                        </a>
+                    </div>
+                </div>
             </div>
-          </div>
-          MANUAL DE USO DE CSS
-          <div class="elemento">
-            <a href="https://belena25.github.io/miManual/css.html">
-              <img class="imagen" src="assets/worh3.png" />
-            </a>
-          </div>
-          MI PRESENTACION
-          <div class="linea-2">
-            <div class="elemento">
-              <a
-                href="https://belena25.github.io/miPortafolio/"
-                target="_blank"
-              >
-                <img class="imagen" src="assets/work4.png" />
-              </a>
+        </div>
+        <div class="presentacionesh" id="presentacionesh">
+            <h2 class="text_shadows">Presentaciones</h2>
+        </div>
+        <div class="meTalking">
+            <img id="me" src="assets/dancer.gif" style="width: 400px" />
+            <div class="bubble">
+                <div class="texto">
+                    <p><b>Otras actividades...</b></p>
+                    <p>A parte de mi pasion por la programación, me encanta el arte en todas sus formas</p>
+                    <p>He participado en el ballet folklórico de mi universidad y he tenido diversas participaciones. Esta combinación de habilidades me permite abordar los desafíos con una perspectiva única y creativa.</p>
+                </div>
             </div>
-            <div class="elemento">
-              <a
-                href="https://belena25.github.io/miPortafolio/"
-                target="_blank"
-              >
-                <img class="imagen" src="assets/work5.png" />
-              </a>
+        </div>
+        <div class="contenedor-presentaciones">
+            Presentaciones de danza
+            <div class="linea-1">
+                <div class="elemento">
+                    <a href="https://drive.google.com/file/d/1cbMc4uI_8xDprCrd7-JfOYBx9MSCCT06/view?usp=sharing" target="_blank">
+                        <img class="imagen" src="assets/cocha .jpeg" />
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="https://drive.google.com/file/d/1tKIeOUHwCt6mRNe-zgE4qyf1V77CG_93/view?usp=sharing" target="_blank">
+                        <img class="imagen" src="assets/cocha 2.jpeg" />
+                    </a>
+                </div>
             </div>
-          </div>
+            Danzas cochabambinas
+            <div class="elemento">
+                <a href="https://drive.google.com/file/d/1K_GDjvFxhbhWdI12LuyqlVvQzYXBzBvP/view?usp=sharing" target="_blank">
+                    <img class="imagen" src="assets/morenada.jpeg" />
+                </a>
+            </div>
+            Danza morenada
+            <div class="linea-2">
+                <div class="elemento">
+                    <a href="https://drive.google.com/file/d/1KZsYEWkP62IlHqnIcoOwQrim5eDydDq4/view?usp=sharing" target="_blank">
+                        <img class="imagen" src="assets/salay.jpeg" />
+                    </a>
+                </div>
+            </div>
+            Danza salay
         </div>
-      </div>
-      <div class="presentacionesh" id="presentacionesh">
-        <h2 class="text_shadows">Presentaciones</h2>
-      </div>
-      <div class="meTalking">
-        <img
-          id="me"
-          src="assets/dancer.gif"
-          style="width: 400px"
-        />
-        <div class="bubble">
-          <div class="texto">
-            <p><b>Otras actividades...</b></p>
-            <p>
-              A parte de mi pasion por la porgramacion, me encanta el arte en
-              todas sus formas
-            </p>
-            <p>
-              He participado en el ballet folklórico de mi universidad y he
-              tenido diversas participaciones. Esta combinación de habilidades
-              me permite abordar los desafíos con una perspectiva única y
-              creativa.
-            </p>
-          </div>
-        </div>
-      </div>
-    
-      <div class="contenedor-presentaciones">
-        Presentaciones de danza
-        <div class="linea-1">
-          <div class="elemento">
-            <a href="https://drive.google.com/file/d/1cbMc4uI_8xDprCrd7-JfOYBx9MSCCT06/view?usp=sharing" target="_blank">
-              <img class="imagen" src="assets/cocha .jpeg" />
-            </a>
-          </div>
-          <div class="elemento">
-            <a
-              href="https://drive.google.com/file/d/1tKIeOUHwCt6mRNe-zgE4qyf1V77CG_93/view?usp=sharing"
-              target="_blank"
-            >
-              <img class="imagen" src="assets/cocha 2.jpeg" />
-            </a>
-          </div>
-        </div>
-        Danzas cochabambinas
-        <div class="elemento">
-          <a href="https://drive.google.com/file/d/1K_GDjvFxhbhWdI12LuyqlVvQzYXBzBvP/view?usp=sharing" target="_blank">
-            <img class="imagen" src="assets/morenada.jpeg" />
-          </a>
-        </div>
-        Danza morenada
-        <div class="linea-2">
-          <div class="elemento">
-            <a
-              href="https://drive.google.com/file/d/1KZsYEWkP62IlHqnIcoOwQrim5eDydDq4/view?usp=sharing"
-              target="_blank"
-            >
-              <img class="imagen" src="assets/salay.jpeg" />
-            </a>
-          </div>
-        </div>
-        Danza salay
-      </div>
-
-      <footer>Copyright Belen Camargo 2022</footer>
+        <footer>Copyright Belen Camargo 2022</footer>
     </div>
-  </body>
+</body>
 </html>
